<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Enrolment App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_student">New enrolment</string>
    <string name="action_save_registration">Save</string>
    <string name="action_back">Back</string>
    <string name="toast_save_file_not_found">No data saved.</string>
    <string name="title_activity_add_enrolment">Add Registration</string>
    <string name="add_enrolment_name">Name</string>
    <string name="add_enrolment_first_name">First name</string>
    <string name="add_enrolment_label_date_of_birth">Date of birth</string>
    <string name="button_save">Save</string>
    <string name="button_subjects">Subjects</string>
    <string name="title_activity_birth_date_picker">Select date of birth</string>
    <string name="title_activity_edit_subject">Add/Edit subject</string>
    <string name="grade_a">A</string>
    <string name="grade_b">B</string>
    <string name="grade_c">C</string>
    <string name="grade_d">D</string>
    <string name="grade_e">E</string>
    <string name="grade_f">F</string>
    <string name="label_subjects">Subjects</string>
    <string name="add_subjects_description">Add subject</string>
    <string name="hint_edit_subject_name">Subject</string>
    <string name="default_subject_name">Empty Subject</string>
    <string name="toast_save_failed">Failed to save data</string>
    <string name="example_age">Age: 16</string>
    <string name="example_average">Average: 2.3</string>
    <string name="example_name">Doe, John</string>
    <string name="label_age">Age</string>
    <string name="label_average">Average</string>
    <string name="toast_add_student_not_valid">First, last name or day of birth field not filled! You also have to add at least one or more subjects</string>
    <string name="student_edit_icon_description">Edit icon</string>
    <string name="student_delete_icon_description">Delete icon</string>
    <string name="student_icon_description">student_icon_description</string>
    <string name="age_minor">Minor</string>
    <string name="age_major">Major</string>
</resources>
