<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ImageView
        android:id="@+id/studentIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/studentFullName"
        android:text="@string/example_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="6dp"
        android:layout_alignBaseline="@+id/studentIcon"
        android:layout_toRightOf="@+id/studentIcon"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
    android:paddingRight="6dp"
    android:id="@+id/studentAge"
    android:text="@string/example_age"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@+id/studentIcon"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:layout_marginTop="23dp"
    android:layout_marginLeft="11dp" />

    <TextView
        android:id="@+id/studentAverage"
        android:text="@string/example_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/studentAge"
        android:layout_alignBaseline="@id/studentAge"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/studentIconEdit"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@android:drawable/ic_menu_edit"
        android:onClick="onClickEditSubject" />

    <ImageView
        android:id="@+id/studentIconDelete"
        android:layout_alignBaseline="@id/studentIconEdit"
        android:layout_toLeftOf="@id/studentIconEdit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@android:drawable/ic_menu_delete"
        android:onClick="onClickRemoveSubject" />

</RelativeLayout>